--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,5 +41,10 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.1'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.1'
     implementation 'com.google.code.gson:gson:2.9.0'
+    testImplementation 'io.mockk:mockk:1.10.5'
 }
