--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,17 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
+    id 'dagger.hilt.android.plugin'
 }
 
 android {
-    compileSdk 33
+    compileSdk 32
 
     defaultConfig {
         applicationId "com.sufyan.foodrecipie"
         minSdk 24
-        targetSdk 33
+        targetSdk 32
         versionCode 1
         versionName "1.0"
 
@@ -29,24 +31,37 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
-    var retrofitVersion = "2.9.0"
-    implementation 'androidx.core:core-ktx:1.9.0'
+    var retrofit_version = "2.9.0"
+    var hilt_version = "2.41"
+    implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1"
-    implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
-    implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
     implementation 'com.squareup.okhttp3:logging-interceptor:4.9.1'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4'
     implementation 'com.google.code.gson:gson:2.9.0'
 
+    // Retrofit
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+
+    // DI Hilt
+    implementation "com.google.dagger:hilt-android:$hilt_version"
+    //For annotation processing
+    kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
+
+    // Testing
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    testImplementation 'io.mockk:mockk:1.10.5'
+    testImplementation 'io.mockk:mockk:1.12.4'
     testImplementation 'androidx.arch.core:core-testing:2.1.0'
 }
