--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,7 +48,7 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:4.9.1'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4'
     implementation 'com.google.code.gson:gson:2.9.0'
-
+    implementation "androidx.activity:activity-ktx:1.5.0"
     // Retrofit
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
