--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,11 +17,10 @@
         android:theme="@style/Theme.FoodRecipie"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.recipelist.RecipeListActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
